configuring retrofit creating characters response models creating characters fragment creating characters view model and use cases calling server to get characters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MarvelApplication</string>
+    <string name="no_data_received">No data received</string>
 </resources>
