Load characters from server and list them in characters fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">MarvelApplication</string>
     <string name="no_data_received">No data received</string>
+    <string name="character_image">Character image</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
