Adding dependencies for Unit testing under Unit tests comment in app build.gradle Creating CharacterDetailsUseCaseImplTest.kt as unit test cases CharacterDetailsUseCaseImpl.kt to test get comics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="character_image">Character image</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="swipe_down_to_refresh">Swipe down to refresh data</string>
 </resources>
